--- a/src/components/modal/modal.html
+++ b/src/components/modal/modal.html
@@ -4,7 +4,7 @@
     <require from="./modal-footer/modal-footer.html"></require>
 
     <div class="modal" tabindex="-1">
-        <div class="modal-dialog ${_size}">
+        <div class="modal-dialog ${size}">
             <div class="modal-content">
                 <slot></slot>
             </div>
