--- a/src/components/modal/modal.html
+++ b/src/components/modal/modal.html
@@ -1,9 +1,5 @@
 <template>
-    <require from="./modal-header/modal-header.html"></require>
-    <require from="./modal-body/modal-body.html"></require>
-    <require from="./modal-footer/modal-footer.html"></require>
-
-    <div class="modal" tabindex="-1">
+    <div class="modal fade" tabindex="-1">
         <div class="modal-dialog ${size}">
             <div class="modal-content">
                 <slot></slot>
