--- a/src/components/modal/modal.html
+++ b/src/components/modal/modal.html
@@ -1,7 +1,7 @@
 <template>
     <div class="modal fade" tabindex="-1">
         <div class="modal-dialog ${size}">
-            <div class="modal-content">
+            <div class="modal-content ${bg === 'dark' ? 'bg-dark' : 'bg-light'}">
                 <slot></slot>
             </div>
         </div>
